--- a/index.html
+++ b/index.html
@@ -1,31 +1,2 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-
-    <header> </header>
-    <section class="featured-books"> </section>
-
-    <section class="new-releases"> 
-        <div class="release green-box"></div>
-        <div class="release pink-box"></div>
-        <div class="release yellow-box"></div>
-        <div class="release green-box"></div>
-        <div class="release blue-box"></div>
-    </section>
-
-    <section class="news"></section>
-
-    <section class="series"></section>
-
-    <section class="best-sellers"> </section>
-    
-    <footer class="foot"> </footer>
-
-</body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><link rel="dns-prefetch" href="//127.0.0.1"><title>CC Libraries</title><script>window.nodeRequire = (window.cep_node && window.cep_node.require) || window.require || function () {};
+        window.process = window.process || (window.cep_node && window.cep_node.process);</script><script defer="defer" src="main.js"></script></head><body><div id="content"></div></body></html>
